<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/addJob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:text="Add a new Job"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/jobTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:hint="Job Title"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/addJob"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Job Description"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@+id/jobTitle"
        app:layout_constraintStart_toStartOf="@+id/jobTitle"
        app:layout_constraintEnd_toEndOf="@+id/jobTitle" />

    <EditText
        android:id="@+id/payment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Payments"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintEnd_toEndOf="@+id/description" />

    <EditText
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Location"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/payment"
        app:layout_constraintStart_toStartOf="@+id/payment"
        app:layout_constraintEnd_toEndOf="@+id/payment" />

    <!-- Spinner for selecting Job Type -->
    <Spinner
        android:id="@+id/jobType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:layout_constraintStart_toStartOf="@+id/location"
        app:layout_constraintEnd_toEndOf="@+id/location" />

    <Button
        android:id="@+id/post"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="24dp"
        android:text="Post"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobType" />

    <EditText
        android:id="@+id/jobTags"
        android:layout_width="367dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:hint="Tags e.g: outdoor, lawn, summer"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/include2"
        app:layout_constraintTop_toBottomOf="@+id/jobType" />
</androidx.constraintlayout.widget.ConstraintLayout>
